# codedoc-assistant

./: app.py  app_test.py  pyproject.toml  requirements.txt  test.py
experiments/: test.py
faiss_store/: index.faiss  index.pkl
